# datahub.client

./: .env  CHANGELOG.md  INSTALL.md  MANIFEST.in  Makefile  Manifest.in  README.md  config.json  pyproject.toml  requirements.in  requirements.txt  setup.py  tareas.md
datahub/: Conf.py  __init__.py  catalog.py  config.dev.json  config.json  config.prod.json  config.py  dataset.py  logging.dev.ini  logging.ini  logging.prod.ini  product.py  products.py  thredds.py  utils.py  variable.py  variables.py
datahub/model/: product.py
doc/: 01 get all products.ipynb  02 get a product by name or alias.ipynb  03 get the variables of a product.ipynb  04 get available dates of a product.ipynb  05 download csv.ipynb  06 download an area.ipynb  07 get_data_in_point_between_dates.ipynb  08 get_xarray_dataset.ipynb
tests/: test_config.py  test_product.py  test_products.py  test_thredds.py  test_utils.py  test_variables.py
